new hotel links

--- a/src/pages/2025/attend/resources.mdx
+++ b/src/pages/2025/attend/resources.mdx
@@ -71,7 +71,6 @@ Please see the hotel blocks below for the 2025 Annual Conference. These hotels h
 
 - There are three general hotels that can be reserved by any attendee.
   - All hotels are within 5 blocks of both the Convention Center and the Light Rail station.
-  - Limited rooms are available in a hotel adjacent to the Convention Center for those with accessibility and/or mobility concerns.  For more information on costs and availability please contact access@ostem.org. 
 - Hotel blocks are first come, first served.
   - This page will be updated weekly to indicate remaining capacity at each hotel. Once a hotel is full, you will not be able to make any reservations under our block.
   - Reservations are available for booking Tuesday, October 15th through Monday, October 21st. Please note that Tuesday, Wednesday, and Sunday night availability is limited.
@@ -122,13 +121,12 @@ class="inline-block mt-4 px-3 py-1.5 bg-red-600 text-white shadow hover:bg-red-7
 <br/>(3 blocks to BCC, 2 blocks to Light Rail)
 <br/>$229 per Night plus taxes and fees</p>
 
-<span className='text-red-800 dark:text-red-200'><b>Booking Link Coming Soon</b>!</span>
 <br/>
-
-
-<p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
-  Coming Soon!
-</p>
+<a href="https://book.passkey.com/e/51033492" rel="noopener noreferrer" target='_blank' 
+class="inline-block mt-4 px-3 py-1.5 bg-pink-600 text-white shadow hover:bg-pink-800 transition-colors duration-200 dark:bg-pink-800 dark:hover:bg-pink-600"
+>
+  Marriott Booking Website
+</a>
 
 </div>
 <div className='w-full'>
