--- a/src/pages/2025/attend/schedule.mdx
+++ b/src/pages/2025/attend/schedule.mdx
@@ -37,7 +37,7 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 
 </div>
 
-- **8:00 AM:** Registration Desk / Help Desk opens
+- **8:00 AM - 6:00PM:** Registration Desk / Help Desk 
 - **9:00 AM - 12:00 PM:** Pre-Conference Programs
 - **11:30 AM - 1:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> OAC Meeting
 - **1:00 PM - 1:40 PM:** New to the Conference Session
@@ -51,7 +51,7 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 
 </div>
 
-- **8:00 AM:** Registration Desk / Help Desk opens
+- **8:00 AM - 7:00 PM:** Registration Desk / Help Desk 
 - **8:30 AM - 9:30 AM:** Breakfast Plenary
 - **9:00 AM - 12:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
 - **9:45 AM - 10:45 AM:** Workshop Block 1
@@ -70,8 +70,8 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 
 </div>
 
-- **8:00 AM:** Registration Desk / Help Desk opens
 - **8:00 AM:** Poster Room opens
+- **8:00 AM - 8:00 PM:** Registration Desk / Help Desk 
 - **9:00 AM - 10:00 AM:** Workshop Block 4
 - **10:00 AM - 1:00 PM:** Career and Graduate School Expo
 - **10:00 AM - 4:00 PM:** oSTEM Closet: Step Out in Style
@@ -82,79 +82,5 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 - **5:00 PM - 6:15 PM:** Closing Plenary
 - **8:00 PM - 9:30 PM:** <TextBadge className='border-nav-blue text-nav-blue'>Add-On</TextBadge> oSTEM Gala**  
   **oSTEM Gala tickets are a paid add-on during registration.
-
-
-
-<div className="font-bold text-nav-green">
-
-## 2024 High-Level Conference Schedule
-
-</div>
-
-Times and events listed below are subject to change. For the most up-to-date schedule, please see the detailed conference schedule linked above.
-
-<div className="text-teal-700 dark:text-teal-300">
-
-### Thursday - October - 17
-
-</div>
-
-- **12:00 PM:** Registration Desk / Help Desk opens
-- **12:00 PM - 1:30 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> OAC Meeting & Lunch
-- **1:30 PM - 2:00 PM:** New to the Conference Session
-- **2:00 PM - 5:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
-- **2:15 PM - 3:15 PM:** Workshop Block 1
-- **3:30 PM - 4:30 PM:** Workshop Block 2
-- **5:00 PM - 6:30 PM:** Membership Mixers
-
-<div className="text-nav-blue">
-
-### Friday - October - 18
-
-</div>
-
-- **7:00 AM:** Registration Desk / Help Desk opens
-- **8:00 AM - 9:00 AM:** Plenary Kick-off
-- **9:00 AM - 12:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
-- **9:15 AM - 10:15 AM:** Workshop Block 3
-- **10:00 AM - 12:00 PM:** Career and Graduate Expo Success Clinic
-- **10:00 AM - 6:00 PM:** oSTEM Closet: Step Out in Style
-- **10:30 AM - 11:30 AM:** Workshop Block 4
-- **11:45 AM - 1:00 PM:** Plenary Lunch
-- **1:00 PM - 5:00 PM:** Career and Graduate School Expo
-- **5:00 PM - 6:00 PM:** Workshop Block 5
-- **6:30 PM - 8:00 PM:** Sponsored Networking Sessions
-- **8:00 PM - 10:00 PM:** Evening Social 
-
-
-<div className="text-indigo-700 dark:text-indigo-300">
-
-### Saturday - October - 19
-
-</div>
-
-- **7:00 AM:** Registration Desk / Help Desk opens
-- **8:00 AM:**  Poster Room opens
-- **8:30 AM - 9:30 AM:** Workshop Block 6
-- **9:30 AM - 10:30 AM:** Poster Presentation 1
-- **10:00 AM - 4:00 PM:** oSTEM Closet: Step Out in Style
-- **10:30 AM - 11:30 AM:** Poster Presentation 2
-- **11:00 AM - 3:00 PM:** Career and Graduate School Expo
-- **3:00 PM - 4:00 PM:** Workshop Block 7
-- **4:15 PM - 5:15 PM:** Plenary
-- **5:30 PM - 7:00 PM:** Sponsored Networking Sessions
-- **8:00 PM - 9:30 PM:** <TextBadge className='border-nav-blue text-nav-blue'>Add-On</TextBadge> oSTEM Gala\*\*
-
-\*\* oSTEM Gala tickets are a paid add-on during registration.
-
-<div className="text-nav-purple">
-
-### Sunday - October - 20
-
-</div>
-
-- **8:00 AM:** Help Desk opens
-- **10:00 AM - 11:00 AM:** Decompression Creative Zone 
-- **10:00 AM - 11:00 AM:** Volunteering with oSTEM
 
 </SiteLayout>
