one more set of updates

--- a/src/pages/2025/attend/registration.mdx
+++ b/src/pages/2025/attend/registration.mdx
@@ -87,7 +87,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
   <p>oSTEM members receive discounted tickets. Member discounts stack with early-bird discounts.</p>
   <ul>
     <li>If you are not currently a member, you can <a href='https://ostem.org/page/how-to-join-ostem'>become one on our Join oSTEM page</a>.</li>
-    <li>Members will need their <b>Member ID</b> to purchase tickets at the member rate. You can find your ID* by going to oSTEM.org and clicking on <a target='_blank' href='https://web.membernova.com/305556/User/Login?OriginalUrl=4pKVpb/xoDZG1dUAW84nsHhYAw61eLT2svqZ8qNGE4fU3N+bOXWDED/RQHxka661'>Member Login</a>. Your ID will be displayed under the Member Tab.<br/>* <i>We are actively migrating to a new member management system, so these instructions may change.</i></li>
+    <li>Members will need their <b>Member ID</b> to purchase tickets at the member rate. To find your Member ID, sign in to oSTEM.org, go to your profile, and then navigate to 'Accounts + Settings'. Direct link: https://ostem.org/members/edit.asp*</li>
   </ul>
 <br/>
 
@@ -106,8 +106,8 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 <p><strong>Join us for the Gala — the perfect way to round off the conference!</strong></p>
 <p>This year’s Gala will feature light refreshments, music and dancing, space to connect with fellow attendees, and a special recognition of members of the oSTEM community. It's your chance to celebrate the weekend, the connections you've made, and the achievements of our community throughout the year.</p>
 <ul>
-  <li>Gala tickets are an optional, paid add-on - they are <b className='text-nav-pink'>not included</b> with your conference pass. Each attendee needs their own add-on ticket.</li>
-  <li>Gala is on Saturday night. Please refer to <a href='schedule'>our high-level schedule</a> for more details.</li>
+  <li>Gala tickets are an optional, paid add-on - they are <b className='text-nav-pink'>not included</b> with your conference pass. Each attendee needs their own add-on ticket. Gala tickets are not available for on-site purchase.</li>
+  <li>Gala is on Saturday night. Please refer to <a href='schedule'>our high-level schedule</a> or our <a href='about'>What to Expect page</a> for more details.</li>
 </ul>
 <br/>
 
