--- a/src/pages/2025/attend/schedule.mdx
+++ b/src/pages/2025/attend/schedule.mdx
@@ -43,6 +43,8 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 - **1:00 PM - 1:40 PM:** New to the Conference Session
 - **2:00 PM - 5:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
 - **2:00 PM - 5:00 PM:** Specialty Workshop Blocks
+- **5:00 PM - 7:00 PM:** Dinner Break
+   - Attendees are free to explore local dining options during this time.
 - **7:00 PM - 8:00 PM:** Membership Mixers
 
 <div className="text-nav-blue">
@@ -61,6 +63,8 @@ Times and events listed below are <strong>subject to change</strong>. <!--For th
 - **12:00 PM - 3:00 PM:** Career and Graduate School Expo
 - **3:00 PM - 4:00 PM:** Workshop Block 3
 - **4:15 PM - 5:00 PM:** Evening Plenary
+- **5:00 PM - 6:30 PM:** Dinner Break
+    - Attendees are free to explore local dining options during this time.
 - **6:30 PM - 8:00 PM:** Sponsored Networking Sessions
 - **8:00 PM - 10:00 PM:** oSTEM Social
 
