beep boop meals :(

--- a/src/pages/2025/attend/about.mdx
+++ b/src/pages/2025/attend/about.mdx
@@ -20,6 +20,7 @@ import Image from "next/image";
     <ul className="space-y-2">
       <li><a href="#networking" className="text-nav-green hover:underline">Networking Events</a></li>
       <li><a href="#resources" className="text-nav-green hover:underline">On-Site Resources</a></li>
+      <li><a href="#meals" className="text-nav-green hover:underline">Meals & Refreshments</a></li>
       <li><a href="#ticketed-programs" className="text-nav-green hover:underline">Ticketed Programs</a></li>
       <li><a href="#pre-conference" className="text-nav-green hover:underline">Pre-Conference Programs</a></li>
     </ul>
@@ -90,6 +91,29 @@ import Image from "next/image";
     </p>
   </div>
 </div>
+<div>
+  <h2 id="meals" className="text-nav-green font-bold">Meals & Refreshments</h2>
+  <div className="bg-primary rounded p-4 pb-6">
+    <p>
+      Due to the current instability of our sponsor base, we have made some adjustments to the meal offerings for this year’s conference. While we’ve worked hard to keep registration costs the same, rising convention center expenses have led us to reduce the number of meals provided.
+    </p>
+    <p>
+      Attendees can expect:
+    </p>
+    <ul className="list-disc pl-6">
+      <li><strong>Water, coffee, and tea</strong> available throughout the conference.</li>
+      <li><strong>Breakfast</strong> provided on <strong>Friday and Saturday</strong> mornings.</li>
+      <li><strong>Hors d'oeuvres</strong> at the <strong>oSTEM Gala</strong> (for those who have purchased tickets).</li>
+    </ul>
+    <p>
+      We are still exploring options for <strong>lunch</strong> and will provide updates as we finalize arrangements.
+    </p>
+    <p>
+      We appreciate your understanding as we navigate these challenges, and we're committed to making your experience at the conference enjoyable and valuable.
+    </p>
+  </div>
+</div>
+
 
 <div>
   <h2 id="ticketed-programs" className="text-nav-green font-bold">Ticketed Programs</h2>
