many an update nave bar, registration links, call for posters

--- a/src/pages/2025/attend/registration.mdx
+++ b/src/pages/2025/attend/registration.mdx
@@ -57,14 +57,22 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
     <p><b>Early Bird Discount:</b> Save $25 on registration tickets by purchasing them by June 30!</p>
     <p>Scroll down for more information about purchasing tickets and add-ons.</p>
     <br/>
-    <p className='text-orange-700 dark:text-yellow-200'>[Replace with Links]</p>
+    <CTAButton
+    onClick="https://whova.com/portal/registration/pioyKvdWoH3XmzSwJPWD/gbgxchsb"
+    backgroundColor="green">
+    Collegiate Registration
+    </CTAButton>
   </Tab.Panel>
   <Tab.Panel>
     <TicketTable type='professional'></TicketTable>
     <p><b>Early Bird Discount:</b> Save $50 on registration tickets by purchasing them by June 30!</p>
     <p>Scroll down for more information about purchasing tickets and add-ons.</p>
     <br/>
-    <p className='text-orange-700 dark:text-yellow-200'>[Replace with Links]</p>
+    <CTAButton
+    onClick="https://whova.com/portal/registration/pioyKvdWoH3XmzSwJPWD/j7tj77uo"
+    backgroundColor="green-accent">
+    Professional Registration
+    </CTAButton>
   </Tab.Panel>
   <Tab.Panel>
     <p>Expo Only tickets only include access to the Graduate School and Career Fair Expo.<br/>These tickets <b>do not include</b> any other programming or any meals.</p>
@@ -72,7 +80,11 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
     <TicketTable type='expo'></TicketTable>
     <p>Scroll down for more information about purchasing tickets.</p>
     <br/>
-    <p className='text-orange-700 dark:text-yellow-200'>[Replace with Links]</p>
+    <CTAButton
+    onClick="https://whova.com/portal/registration/pioyKvdWoH3XmzSwJPWD/atsodwov"
+    backgroundColor="umber">
+    Expo Only Registration
+    </CTAButton>
   </Tab.Panel>
   <Tab.Panel>
     <p>If your company/organization has an exhibitor or sponsorship package, please reach out to your organization's conference contact for registration instructions. Exhibitor and sponsor tickets may not be purchased from this page.</p>
@@ -104,7 +116,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 
 <h4>oSTEM Gala</h4>
 <p><strong>Join us for the Gala — the perfect way to round off the conference!</strong></p>
-<p>This year’s Gala will feature light refreshments, music and dancing, space to connect with fellow attendees, and a special recognition of members of the oSTEM community. It's your chance to celebrate the weekend, the connections you've made, and the achievements of our community throughout the year.</p>
+<p>This year’s Gala will feature light refreshments, music and dancing, space to connect with fellow attendees, and a special recognition of members of the oSTEM community. It's your chance to celebrate the weekend, the new connections you've made, and the achievements of our community throughout the year.</p>
 <ul>
   <li>Gala tickets are an optional, paid add-on - they are <b className='text-nav-pink'>not included</b> with your conference pass. Each attendee needs their own add-on ticket. Gala tickets are not available for on-site purchase.</li>
   <li>Gala is on Saturday night. Please refer to <a href='schedule'>our high-level schedule</a> or our <a href='about'>What to Expect page</a> for more details.</li>
