--- a/src/pages/2025/present/call-for-posters.mdx
+++ b/src/pages/2025/present/call-for-posters.mdx
@@ -15,7 +15,7 @@ import Image from "next/image";
 />
 <br />
 
-Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now accepting posters for the 14th Annual oSTEM Conference! Read on for more information.
+Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now accepting posters for the 15th Annual oSTEM Conference! Read on for more information.
 
 <div className="text-bright-peach font-bold">
 
@@ -23,24 +23,18 @@ Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now acceptin
 
 </div>
 
-- **June: **Request for Posters Released
-- **September 6: **Deadline for Research Talk consideration
-- **September 30: **Deadline for Poster Submission
-- **September 30: **Research Talk Notification
-- **October 11: **Poster Presentation Number + Time email notification
+- **May 1:** Request for Posters/Talks Opens  
+- **Ongoing:** Poster Acceptance Notifications  
+- **July 30:** Final Research Talk abstract deadline  
+- **August 21:** Final Research Talk Notification deadline  
+- **August 31:** Poster Submission deadline  
+- **September 19:** Poster Presentation Number + Time email notification  
+- **September 26:** Conference Registration closes  
 
 <div className="my-2 flex flex-col items-center sm:flex-row justify-center">
   <div className="my-1 sm:mx-2">
-    <CTAButton onClick="https://www.jotform.com/form/241195822875162">
-      Submit a Poster Proposal
-    </CTAButton>
-  </div>
-</div>
-
-<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
-  <div className="my-1 sm:mx-2">
-    <CTAButton onClick="https://cdn.ostem.org/publicfiles/2024_Abstracts.pdf">
-      2024 Poster Abstract Book
+    <CTAButton onClick="https://www.jotform.com/251055520280143">
+      Submit a Poster or Talk Proposal
     </CTAButton>
   </div>
 </div>
@@ -51,12 +45,15 @@ Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now acceptin
 
 </div>
 
-The oSTEM Annual Conference Poster Session is intended for any researcher to showcase their research to other conference attendees. Presenters will have the opportunity to opt into judging and poster prizes will be awarded in the following categories: Best Undergraduate Research Poster, Best Graduate Researcher, and Best Post-Doctoral Research. We will also facilitate the “People’s Choice” poster competition where conference participants are able to select their favorite poster! Poster awards will first be evaluated by the quality of the abstract submitted and the judging panel will select the top posters in each category to judge their poster presentation. Presenters will be notified the week before the conference if their poster will be visited for poster judging.  
+The 2025 oSTEM Annual Conference Poster Session is intended for any researcher to showcase their research to other conference attendees. Presenters will have the opportunity to opt into judging and poster prizes will be awarded in the following categories: Best Undergraduate Research Poster, Best Graduate Research Poster, and Best Post-Doctoral Research Poster. We will also facilitate the “People’s Choice” poster competition where conference participants are able to select their favorite poster!
 
-All abstract submissions should be submitted following the NIH Structured Abstracts guidelines. 
-Participants also have the opportunity in the same form to submit their work for a research talk. This will use the same abstract submission as the poster presentation. Research talks will be 10-minutes in length followed by 5-minutes for questions immediately following the presentation. These will occur during the workshop blocks throughout the weekend.  
+Poster awards will first be evaluated by the quality of the abstract submitted and the judging panel will select the top posters in each category to judge their poster presentation. Presenters will be notified the week before the conference if their poster will be visited for poster judging.
 
-For full consideration for research talks, please submit prior to September 1, 2024. The final deadline to submit a poster is September 30, 2024. Poster submissions are rolling acceptance. 
+All abstract submissions should be submitted following the NIH Structured Abstracts guidelines.
+
+Participants also have the opportunity in the same form to submit their work for a research talk. This will use the same abstract submission as the poster presentation. Research talks will be 10 minutes in length followed by 5 minutes for questions immediately following the presentation. These will occur during the workshop blocks throughout the weekend.
+
+For full consideration for research talks, please submit prior to July 30, 2025. The final deadline to submit a poster is September 1, 2025. Poster submissions are considered on an ongoing basis.
 
 <div className="text-bright-peach font-bold">
 
@@ -64,41 +61,34 @@ For full consideration for research talks, please submit prior to September 1, 2
 
 </div>
 
-The poster room will open at 8:00 AM on Saturday, October 19 and posters are expected to be on display by the start of the morning poster session. Poster Session 1 will be 10:30 - 11:30 AM where odd numbered posters will be presented while Poster Session 2 will be 2:30 - 3:30 PM for even numbered posters. 
-Awards will be announced in the poster room immediately following Workshop Block 5, and again at the oSTEM Gala dinner.
+The poster room will open at 8:00 AM on Saturday, October 18 and posters are expected to be on display by the start of the morning poster session.  
+Poster Session 1 will be 1–2 PM for odd-numbered posters, and Poster Session 2 will be 2–3 PM for even-numbered posters.  
 
+Awards will be announced in the poster room immediately following Workshop Block 6.
 
 <div className="text-bright-peach font-bold">
 
-## F.A.Q
+## F.A.Q.
 
 </div>
 
-- **What are the recommended poster sizes?**
+- **I have a conflict with the times listed. Can you alter the presenting schedule to fit my needs?**  
+  We cannot accommodate scheduling limitations. Submissions are expected to be available throughout the weekend for a research talk or Saturday for poster presentations.
 
-  The maximum poster dimensions are 48" (wide) x 36" (tall).
+- **What are the recommended poster dimensions?**  
+  The maximum poster dimensions are 48" wide by 36" high.
 
-- **Do I need to bring my poster? Can you print it for me?**
+- **How will the posters be displayed?**  
+  We display the posters on an 8’ by 4’ free-standing cork board with push pins.
 
-  Unfortunately, oSTEM cannot print your poster. We advise that you travel with
-  your poster. Alternatively, a full service FedEx Office Print & Ship Center is located at 1605 NE 7th Ave, Portland, OR 97232 near the conference center.
-
-- **Do students participating in the poster session receive a conference registration discount?**
-
-  No, participating in the poster session alone will not give you a conference discount. If you're interested in submitting a program proposal or panel topic proposal, you can get a discount there should your proposal be accepted.
+- **Do I need to bring my poster/can you print it for me?**  
+  Unfortunately, oSTEM cannot print your poster. We advise that you travel with your poster. However, a full-service FedEx Office Print & Ship Center is located at 11 S Charles St, Baltimore, MD 21201 near the conference center.
 
 - **How will I know if my poster was accepted for a research talk?**  
+  If you indicate you are interested in a research talk, you will be contacted with the time and location of your presentation on or before August 21, 2025. Poster acceptances are rolling, so you will likely receive a poster confirmation before your research talk.
 
-  If you indicate you are interested in a research talk, you will be contacted with the time and location of your presentation by the end of September. Poster acceptances are rolling, so you will likely receive a poster confirmation before your research talk. 
-
-- **When can I set my poster up?**
-  
-  Poster setup will be on Saturday morning and be available throughout the day on Saturday; feel free to take a moment free to wander through the posters during the day.
-
-- **I have a conflict with the times listed. Can you alter the presenting schedule to fit my needs?**
-
-  We cannot accommodate scheduling limitations. Submissions are expected to be available throughout the weekend for a research talk or Saturday for poster presentations. 
-
+- **When can I set my poster up?**  
+  Poster setup will start at 8:00 AM on Saturday morning and be available throughout the day; feel free to wander through the posters during the day.
 
 <div className="text-bright-peach font-bold">
 
@@ -106,15 +96,11 @@ Awards will be announced in the poster room immediately following Workshop Block
 
 </div>
 
-For more information about the conference visit [conference.ostem.org](https://conference.ostem.org).
+For more information about the conference and oSTEM visit [conference.ostem.org](https://conference.ostem.org)
 
-For more information about oSTEM visit [ostem.org](https://ostem.org).
+Any additional questions can be directed to the Conference Programming Committee at  
+[conference-programming@ostem.org](mailto:conference-programming@ostem.org)
 
-Please email our Conference Programming Committee at
-conference-programming@ostem.org with any additional questions.
-
-For inquiries regarding available conference accommodations or to request this
-document in an accessible format, please contact the Conference Accessibility
-Team at access@ostem.org.
+Contact [access@ostem.org](mailto:access@ostem.org) with any questions, including concerns about the accessibility of this process.
 
 </SiteLayout>
