--- a/src/pages/2025/attend/registration.mdx
+++ b/src/pages/2025/attend/registration.mdx
@@ -21,8 +21,7 @@ import landingImg from './registration-2024.png'
 
 <br />
 
-We are pleased to invite you to the 15th Annual Conference in Baltimore, MD! Join
-us in a celebration of diversity across all fields.
+We are pleased to invite you to the 15th Annual Conference in Baltimore, MD! 
 
 <p><b className='text-red-600 dark:text-red-300'>Online ticket sales will close September 26, 11:59 PM EST.</b> No exceptions will be made. <br/>Tickets are available on-site for an additional cost. Please note that on-site tickets do not come with any food vouchers. Additionally, accommodations will be extremely limited due to the short turnaround.</p>
 
@@ -38,7 +37,7 @@ us in a celebration of diversity across all fields.
 
 <TopicSquare title="Conference Ticket Pricing" borderColor="border-nav-green">
 
-Please pay attention to ticket deadlines, as they are **significantly earlier** than previous years. Ticket sales will open on May 1, 2025.
+Please pay attention to ticket deadlines. Ticket sales will open on May 1, 2025.
 
 <p><b className='text-orange-700 dark:text-yellow-200'>Please submit accommodation requests by August 31.</b> You may request accomodations either during online registration or by emailing <a href='mailto:access@ostem.org'>access@ostem.org</a>. After August 31, our ability to provide accommodations will be more limited.</p>
 
@@ -109,7 +108,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
     <li>Group and individual tickets cost the same, but you may purchase up to 30 in one transaction instead of 10.</li>
     <li>All attendees under a set of group tickets must be oSTEM members. Group tickets are not available for non-members.</li>
     <li>You may buy blank group tickets first and then fill in attendee names on a later day.</li>
-    <li>All blank tickets must be filled out by the regular ticket deadline (9/30).</li>
+    <li>All blank tickets must be filled out by the regular ticket deadline (9/26).</li>
     <li>Group tickets cannot be partially refunded. Blank tickets that are not completed by the deadline will be cancelled without a refund.</li>
   </ul>
 <br/>
@@ -133,7 +132,7 @@ Conference Refund & Transfer Policy:
 
 <br/>
 <h4>Additional Information</h4>
-<p>Find information about our venue, discounted hotels, and more on our <a href='attendee-resources'>Attendee Resources page</a>.</p>
+<p>Find information about our venue, discounted hotels, and more on our <a href='resources'>Attendee Resources page</a>.</p>
 <br/>
 
 ---
@@ -155,8 +154,8 @@ No exceptions will be made for online registration after the deadline. There is 
 #### Are registration discounts available?
 Yes, oSTEM members get a discounted rate. Furthermore, the member discount stacks with the early-bird discount allowing you to save more if you purchase your ticket by June 30.
 
-#### I submitted a RFP/RFPT. When should I register?
-Attendees with an accepted [Request for Programs (RFP)](/2025/present/request-for-programs) or [Request for Panel Topics (RFPT)](/2025/present/request-for-panel-topics) submission will receive a 50% registration discount\* on their conference pass. As such, you should hold off registration until you hear whether your submission was accepted or not.
+#### I submitted a RFP. When should I register?
+Attendees with an accepted [Request for Programs (RFP)](/2025/present/request-for-programs) submission will receive a 50% registration discount\* on their conference pass. As such, you should hold off registration until you hear whether your submission was accepted or not.
 
 \* There is a limit on how many discounted tickets you can purchase. Please view the respective RFP and RFPT pages for more information.
 
