--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -35,13 +35,9 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
   </div>
 
   <div className="rounded md:col-span-5 mt-8 border-4 border-baltimore-blue border-solid bg-baltimore-blue">
-  <h3 className="p-4 pt-3 text-white">2025 Conference Updates</h3>
+  <h3 className="p-4 pt-3 text-white">2025 Conference Key Info</h3>
   <div className="bg-primary text-center rounded">
     <div className='text-left p-4'>
-      <span>We are excited to see you soon for our 15<sup>th</sup> Annual Conference!<br />
-        While we are getting things ready for you, we wanted to share a few details below.
-      </span>
-      <br /><br />
       <span className="font-bold">Dates:</span> Thursday, October 16th through Saturday, October 18th, 2025
       <br />
       <span className="font-bold">Location:</span> Baltimore, Maryland at the Baltimore Convention Center
@@ -62,16 +58,6 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
         <li><span className="font-semibold">Conference Weekend:</span> October 16–19, 2025</li>
       </ul>
     </div>
-    <br />
-    <p>Sign up to be notified when Registration or Request for Proposals open:</p>
-    <CTAButton
-      onClick="https://form.jotform.com/243035405380145"
-      backgroundColor="bright-peach"
-      className="mt-4"
-    >
-      Sign Up Here
-    </CTAButton>
-    <br /><br />
   </div>
 </div>
 
