--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -49,6 +49,7 @@ import { faMobileAlt, faDesktop } from '@fortawesome/free-solid-svg-icons';
         <li><span className="font-semibold">RFP Opens:</span> March 1, 2025</li>
         <li><span className="font-semibold">Registration Opens:</span> May 1, 2025</li>
         <li><span className="font-semibold">Call for Posters/Talks Opens:</span> May 1, 2025</li>
+        <li><span className="font-semibold">RFP Deadline:</span> May 31, 2025</li>
         <li><span className="font-semibold">Early Bird Deadline:</span> June 30, 2025</li>
         <li><span className="font-semibold">Research Talk Deadline:</span> June 30, 2025</li>
         <li><span className="font-semibold">Accomodations Request Deadline:</span> August 31, 2025</li>
