check if the rookie chapter of the year award nomination link works properly

--- a/src/pages/2025/awards/index.mdx
+++ b/src/pages/2025/awards/index.mdx
@@ -101,11 +101,10 @@ info@ostem.org or the individual team responsible for the award._
 - A chance to celebrate all that you have accomplished over the past year and to
   demonstrate to those outside of your chapter or organization the amazing
   things you do.
-- Be recognized at an award ceremony during the Annual oSTEM Conference.
-- **Chapter, Rookie, and Chapter Leader Awards** will receive 4 free student
-  registrations. ($748 value)
-- **Advisor Award** receives 1 free advsior registration + 3 free student
-  registrations. ($801 value)
+- **Rookie Chapter of the Year** Winners will receive 4 free student registrations to the Annual Conference ($750 value)
+- **Chapter of the Year** Winners will receive 4 free student registrations to the Annual Conference ($750 value)
+- **Chapter Leader of the Year** Winner will receive 2 free student registrations ($374 value)
+- **Advisor of the Year** Winner will receive 1 free advisor registration + 2 free student registrations ($640 value)
 
 <div>
   <AwardCard
@@ -131,7 +130,7 @@ info@ostem.org or the individual team responsible for the award._
   ]}
   borderColor="border-blue-500"
   alert="Please only submit one nomination per chapter. If you have any questions regarding this application, please contact us at membership@ostem.org."
-  nominateUrl="https://form.jotform.com/240647402875157"
+  nominateUrl="https://form.jotform.com/250804662146152"
   awardDetailUrl="/2025/awards/awards-rookie-chapter"
 />
 
