--- a/src/pages/2025/awards/awards-rookie-chapter.mdx
+++ b/src/pages/2025/awards/awards-rookie-chapter.mdx
@@ -28,9 +28,9 @@ description we encourage you to submit an application for this award.
 Please only submit one nomination per chapter. If you have any questions
 regarding this application, please contact us at membership@ostem.org.
 
-To make a nomination, please use the following [link](https://form.jotform.com/250804662146152).
-
 <br />
+
+To make a nomination, please head to [the main Awards page for nomination forms](.#chapter-awards).
 
 </div>
 
