--- a/src/pages/2025/present/request-for-panelists.mdx
+++ b/src/pages/2025/present/request-for-panelists.mdx
@@ -1,4 +1,4 @@
-mport { CTAButton } from "@/components/button/CTAButton";
+import { CTAButton } from "@/components/button/CTAButton";
 import { SiteLayout } from "@/components/layout/SiteLayout";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/future/image";
