updated request for programs deadline

--- a/src/pages/2025/present/request-for-programs.mdx
+++ b/src/pages/2025/present/request-for-programs.mdx
@@ -23,9 +23,9 @@ oSTEM is now accepting program proposals for the 15th Annual oSTEM Conference.
 
 Successful programs will align with oSTEM’s mission and core values: *integrity, intentionality, respect, passion, and grit*. 
 
-- **Wednesday, March 5**: Request for Programming Released
-- **Friday, May 31**: Deadline for Submissions
-- **End of June**: RFP Decision Notifications
+- **Wednesday, March 5th**: Request for Programming Released
+- **Sunday, June 22nd**: Deadline for Submissions
+- **TBA**: RFP Decision Notifications
 
 <br/>
 <div className="text-l flex justify-center p-2">
