--- a/src/pages/2025/present/request-for-programs.mdx
+++ b/src/pages/2025/present/request-for-programs.mdx
@@ -24,7 +24,7 @@ oSTEM is now accepting program proposals for the 15th Annual oSTEM Conference.
 Successful programs will align with oSTEM’s mission and core values: *integrity, intentionality, respect, passion, and grit*. 
 
 - **Wednesday, March 5th**: Request for Programming Released
-- **Sunday, June 22nd**: Deadline for Submissions
+- **🚨NEW DATE - Sunday, June 22nd**: Deadline for Submissions
 - **TBA**: RFP Decision Notifications
 
 <br/>
