removed link to 2024 resource site

--- a/src/pages/archive/2024/attend/resources.mdx
+++ b/src/pages/archive/2024/attend/resources.mdx
@@ -17,7 +17,7 @@ We have a wealth of general information on our conference Notion page. Topics in
 
 <br/>
 <div className="text-l flex justify-center p-2">
-    <CTAButton onClick="https://ostem.notion.site/Conference-Attendee-Resources-2024-76ea110de8a447278d856623c7e8a7ce" backgroundColor="bright-peach">
+    <CTAButton onClick="/construction" backgroundColor="bright-peach">
       Conference Attendee Resources
     </CTAButton>
 </div>
